# my-py-competitive-programming

./: pyproject.toml
src/my_py_competitive_programming/A02/: main.py
src/my_py_competitive_programming/B02/: main.py
