[tool.poetry]
name = "my-py-competitive-programming"
version = "0.1.0"
description = ""
authors = ["t_ishikawa <tissi0708@gmail.com>"]
readme = "README.md"
packages = [{include = "my_py_competitive_programming", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
